# beedle

./: .env  .gitignore  .todo.txt.kate-swp  Cargo.toml  README.md  config.json  diesel.toml  docker-compose.yml
migrations/2025-06-18-215301_create_product/: up.sql
migrations/2025-07-10-173051_create_session_table/: up.sql
migrations/2025-07-25-233845_add_dates_to_product/: down.sql  up.sql
migrations/2025-08-16-003440_add_product_table/: up.sql
migrations/2025-08-17-001827_seed_example_products/: down.sql  up.sql
src/: config.rs  db.rs  email.rs  errors.rs  main.rs  middlewares.rs  models.rs  pay.rs  price.rs  routes.rs  schema.rs  session.rs  views.rs
src/db/: cache.rs  products.rs  session.rs
src/routes/: .products.rs.kate-swp  admin.rs  cart.rs  checkout.rs  index.rs  product.rs  products.rs
static/css/: style.css
templates/: 404.html  base.html  cart.html  footer.html  header.html  index.html  product.html  products.html  test.html
templates/admin/: add_product.html  base_admin.html  products.html
