[package]
name = "beedle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-csrf = "0.8.0"
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-service = "2.0.2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.8.0"
async-std = "1.12.0"
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = "0.4.38"
diesel = { version = "2.2.11", features = ["postgres", "numeric", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
hex = "0.4.3"
lettre = "0.11.7"
log = "0.4.22"
once_cell = "1.21.3"
r2d2 = "0.8.10"
rand = "0.8.0"
reqwest = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
tera = "1.20.0"
thiserror = "1.0.62"
urlencoding = "2.1.3"
uuid = "1.10.0"
